--- a/simon-extensions-list.json
+++ b/simon-extensions-list.json
@@ -5,13 +5,15 @@
     "zaggino.brackets-git": true,
     "ivogabe.icons": true,
     "hirse.outline-list": true,
-    "brackets-ruler": true,
+    "camden.csslint": true,
+    "brackets-editorconfig": true,
     "gruehle.exclude-folders": true,
     "milosh86.extensions-bulk-installer": false,
     "funcdocr": true,
     "brackets-indent-guides": true,
     "jade": true,
     "camden.jshint": true,
+    "lesshints": true,
     "gruehle.markdown-preview": true,
     "brackets-special-html-chars": true,
     "pflynn.svg.preview": true,
