--- a/simon-extensions-list.json
+++ b/simon-extensions-list.json
@@ -7,14 +7,15 @@
     "hirse.outline-list": true,
     "camden.csslint": true,
     "brackets-editorconfig": true,
-    "gruehle.exclude-folders": true,
     "milosh86.extensions-bulk-installer": false,
+    "jonwolfe.file-tree-exclude": true,
     "funcdocr": true,
     "brackets-indent-guides": true,
     "jade": true,
     "camden.jshint": true,
     "lesshints": true,
     "gruehle.markdown-preview": true,
+    "brackets-nodejs": true,
     "brackets-special-html-chars": true,
     "pflynn.svg.preview": true,
     "camden.w3cvalidation": true
